[package]
name = "kf2_server_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "cookies"] }
scraper = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1", features = ["full"] }
url = "2.4.1"
